// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`adds new tab content appropriately 1`] = `
<a
  aria-label="Link Text (Opens in a new tab)"
  class="hover:underline"
  data-gtm-click=""
  data-gtm-dl-event="cta_click"
  href="https://www.horizontaldigital.com"
  rel="noopener noreferrer"
  role="link"
  tabindex="0"
  target="_blank"
>
  Link Text
  <span
    class="sr-only"
  >
    Only screen readers can access this text
     (Opens in a new tab)
  </span>
</a>
`;

exports[`allows for field to be of type LinkFieldValue 1`] = `
<a
  aria-label="Link Text (Opens in a new tab)"
  class="hover:underline"
  data-gtm-click=""
  data-gtm-dl-event="cta_click"
  href="https://www.horizontaldigital.com"
  rel="noopener noreferrer"
  role="link"
  tabindex="0"
  target="_blank"
>
  Link Text
  <span
    class="sr-only"
  >
    Only screen readers can access this text
     (Opens in a new tab)
  </span>
</a>
`;

exports[`can suppress text and icons 1`] = `
<a
  aria-label=" (Opens in a new tab)"
  class="hover:underline"
  data-gtm-click=""
  data-gtm-dl-event="cta_click"
  href="https://www.horizontaldigital.com"
  rel="noopener noreferrer"
  role="link"
  tabindex="0"
  target="_blank"
>
  
  <span
    class="sr-only"
  >
    Only screen readers can access this text
     (Opens in a new tab)
  </span>
</a>
`;
